--- a/argocd/apps/frigate/secrets/frigate-secret.enc.yaml
+++ b/argocd/apps/frigate/secrets/frigate-secret.enc.yaml
@@ -7,7 +7,7 @@ type: Opaque
 stringData:
     FRIGATE_RTSP_PASSWORD: ENC[AES256_GCM,data:7hXlAngTINau/dm5,iv:oXk/mOWoRhbbmocN4NrBG7zy6bZFEUC2EfeQ5aBRys4=,tag:8BTixIo9ZBmwIsOC0u1Dfg==,type:str]
     PLUS_API_KEY: ENC[AES256_GCM,data:wUSKs9ZKH4ai0OJY7Z8qbjlSh5TYweWU+t0q0w0Y3HMRx5vwkztfnrXDW1mbCGqXGAeaxkToe0Tfm8H+xWEFzDB9dln0fLsTIA5CgJg=,iv:ITHwSvwjbF5ngOAD6sJM8dxbg7uqGEiJyCXxN6Lnhk4=,tag:Sjm1sFz2lmm6P3ksAn2npQ==,type:str]
-    MQTT_PASSWORD: ENC[AES256_GCM,data:eLfZZnYRRnTmSKk=,iv:cgQ6qhBZrOBCOpwp798fuoLXmeT1sBaHJ7HH6Y8R47g=,tag:+5wGF7HPvz9O0FOzGdumgg==,type:str]
+    FRIGATE_MQTT_PASSWORD: ENC[AES256_GCM,data:ARnPclTYbCk6t8I=,iv:t4FgqzypRxBtscYkKI8icuAyLayXqAfJTAWJ36T+sl4=,tag:aiv2N8BLZObai3hZSETDzg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +23,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-26T02:38:27Z"
-    mac: ENC[AES256_GCM,data:nq+tpzavuyCZddXauBWkNlTQur6X1NpEUfrzcsgFL4RsY1+tUcjmJl6d9jSOwCx7mBhJ0VQKsmnbSn8FF9PnesfE7SopKKhbpOQvsZhqEnCBYuIxIMwZH5DyJzKyIPSE7FSuEa3Lk0Ib1xMuCOM19+bI70TSp2NSOTElQ7isMjE=,iv:Cj9go4TlWlVkCouGJk8fXEitHjrw9fuB2zW0n5BNu9g=,tag:W4lnU4jLRtgF+bMGhPYWtQ==,type:str]
+    lastmodified: "2025-01-26T02:49:27Z"
+    mac: ENC[AES256_GCM,data:aplc3Hha4crByQ89y1N0MHyL1QeIYIfwu55cB6ijlymcpFzkxhN6i/prsERyc0vTSG5a410rFrmJ/ZXjYAHGE1RlXgVOf6JLmjHoWsy2y5crsV6P1OPJbsOsRFJda9r0ACxGh2pzGuX6YrhgiUVNPrqQpDylYfUAVi5EXYYVhGk=,iv:dq9ZoZiNzvt3fr6z+VZUfKdo9CqyUiOADzhbitHrjKs=,tag:MAfdgv2OMMf/2BFBhemKBg==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
