--- a/argocd/apps/frigate/app.yaml
+++ b/argocd/apps/frigate/app.yaml
@@ -30,7 +30,7 @@ spec:
           - $values/argocd/apps/frigate/config.yaml
         valuesObject:
           nodeSelector:
-            beta.kubernetes.io/arch: arm64
+            beta.kubernetes.io/arch: amd64
           image:
             tag: stable
             pullPolicy: IfNotPresent
