--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -20,4 +20,5 @@ initial_k3s_server
 remaining_k3s_servers
 
 [k3s_agents]
-192.168.1.18 node_name=marcus-server
+#192.168.1.18 node_name=marcus-server
+192.168.10.33 node_name=hp-worker
