--- a/argocd/apps/arr-stack/app-set.yaml
+++ b/argocd/apps/arr-stack/app-set.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   generators:
     - git:
-        repoURL: git@github.com:myanello/homelab.git
+        repoURL: https://github.com/myanello/homelab.git
         revision: HEAD
         files:
           - path: "argocd/apps/arr-stack/apps"
@@ -26,5 +26,5 @@ spec:
         namespace: arr-stack
       source:
         path: "{{path}}"
-        repoURL: git@github.com:myanell/homelab.git
+        repoURL: https://github.com/myanello/homelab.git
         targetRevision: HEAD
