--- a/argocd/apps/media-server/radarr/deploy.yaml
+++ b/argocd/apps/media-server/radarr/deploy.yaml
@@ -36,16 +36,16 @@ spec:
           ports:
             - containerPort: 7878
               protocol: TCP
-          # volumeMounts:
-          #   - mountPath: /config
-          #     name: radarr-config
+          volumeMounts:
+            - mountPath: /config
+              name: radarr-config
           #   - mountPath: /data/media
           #     name: media
       restartPolicy: Always
-      # volumes:
-      #   - name: radarr-claim0
-      #     persistentVolumeClaim:
-      #       claimName: radarr-claim0
+      volumes:
+        - name: radarr-config
+          persistentVolumeClaim:
+            claimName: radarr-config
       #   - name: radarr-claim1
       #     persistentVolumeClaim:
       #       claimName: radarr-claim1
