--- a/argocd/apps/media-server/shared-storage/pv.yaml
+++ b/argocd/apps/media-server/shared-storage/pv.yaml
@@ -1,9 +1,7 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: media-pv
-  labels:
-    type: media-storage    # Matched by PVC selector
+  name: media-pv   # Matched by PVC selector
 spec:
   capacity:
     storage: 10Ti
