pv and pvc settings

--- a/argocd/apps/media-server/radarr/pvc.yaml
+++ b/argocd/apps/media-server/radarr/pvc.yaml
@@ -17,6 +17,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: radarr-media
 spec:
+  storageClassName: ""
   accessModes:
     - ReadWriteMany
   resources:
