--- a/argocd/apps/media-server/shared-storage/pv.yaml
+++ b/argocd/apps/media-server/shared-storage/pv.yaml
@@ -3,6 +3,8 @@ kind: PersistentVolume
 metadata:
   name: media-pv   # Matched by PVC selector
 spec:
+  storageClassName: ""
+  persistentVolumeReclaimPolicy: Retain
   capacity:
     storage: 10Ti
   accessModes:
