--- a/argocd/apps/media-server/radarr/deploy.yaml
+++ b/argocd/apps/media-server/radarr/deploy.yaml
@@ -49,6 +49,22 @@ spec:
         - name: media
           persistentVolumeClaim:
             claimName: radarr-media
+      readinessProbe:
+        httpGet:
+          path: /
+          port: 7878
+        initialDelaySeconds: 30
+        periodSeconds: 10
+        timeoutSeconds: 5
+        failureThreshold: 3
+      livenessProbe:
+        httpGet:
+          path: /
+          port: 7878
+        initialDelaySeconds: 60
+        periodSeconds: 15
+        timeoutSeconds: 5
+        failureThreshold: 3
         # - name: media
         #   nfs:
         #     server: marcus-server.lan
