--- a/argocd/apps/media-server/radarr/pvc.yaml
+++ b/argocd/apps/media-server/radarr/pvc.yaml
@@ -1,9 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  labels:
-    io.kompose.service: radarr-config
-  name: radarr-config
+  name: config
 spec:
   storageClassName: nfs-storage
   accessModes:
@@ -11,16 +9,16 @@ spec:
   resources:
     requests:
       storage: 100Mi
----
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: radarr-media
-spec:
-  storageClassName: ""
-  accessModes:
-    - ReadWriteMany
-  resources:
-    requests:
-      storage: 100Gi
-  volumeName: media-pv
+# ---
+# apiVersion: v1
+# kind: PersistentVolumeClaim
+# metadata:
+#   name: radarr-media
+# spec:
+#   storageClassName: ""
+#   accessModes:
+#     - ReadWriteMany
+#   resources:
+#     requests:
+#       storage: 100Gi
+#   volumeName: media-pv
