--- a/argocd/apps/media-server/app-set.yaml
+++ b/argocd/apps/media-server/app-set.yaml
@@ -23,7 +23,7 @@ spec:
           - CreateNamespace=true
       destination:
         name: in-cluster
-        namespace: "media-server"
+        namespace: {{path.basename}}
       source:
         path: "{{path}}"
         repoURL: https://github.com/myanello/homelab.git
