--- a/argocd/apps/media-server/app-set.yaml
+++ b/argocd/apps/media-server/app-set.yaml
@@ -25,6 +25,6 @@ spec:
         name: in-cluster
         namespace: {{path.basename}}
       source:
-        path: "{{path}}"
+        path: "{{path.basename}}"
         repoURL: https://github.com/myanello/homelab.git
         targetRevision: HEAD
