--- a/argocd/apps/media-server/app-set.yaml
+++ b/argocd/apps/media-server/app-set.yaml
@@ -23,8 +23,8 @@ spec:
           - CreateNamespace=true
       destination:
         name: in-cluster
-        namespace: {{path.basename}}
+        namespace: "{{path.basename}}"
       source:
-        path: "{{path.basename}}"
+        path: "{{path}}"
         repoURL: https://github.com/myanello/homelab.git
         targetRevision: HEAD
