--- a/argocd/apps/ingress-nginx/app.yaml
+++ b/argocd/apps/ingress-nginx/app.yaml
@@ -30,6 +30,7 @@ spec:
             use-forwarded-headers: "true"
             proxy-read-timeout: "3600"
             proxy-send-timeout: "3600"
+            proxy-body-size: "0"
             force-ssl-redirect: "true"
           extraArgs:
             default-ssl-certificate: "ingress-nginx/default-ingress-cert"
