--- a/argocd/apps/media-server/sonarr/deploy.yaml
+++ b/argocd/apps/media-server/sonarr/deploy.yaml
@@ -39,6 +39,8 @@ spec:
           volumeMounts:
             - mountPath: /config
               name: config
+            - mountpath: /data/media
+              name: media
           readinessProbe:
             httpGet:
               path: /
