--- a/argocd/apps/media-server/qbittorrent/deploy.yaml
+++ b/argocd/apps/media-server/qbittorrent/deploy.yaml
@@ -60,7 +60,7 @@ spec:
         - name: VPN_TYPE
           value: wireguard
         - name: VPN_PORT_FORWARDING
-          value: on
+          value: "on"
         - name: VPN_PORTFORWARDING_PROVIDER
           value: protonvpn
         securityContext:
