move secrets around4

--- a/argocd/apps/media-server/qbittorrent/kustomization.yaml
+++ b/argocd/apps/media-server/qbittorrent/kustomization.yaml
@@ -1,4 +1,6 @@
-generators:
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+resources:
   - ./vpn-secrets/secret-generator.yaml
   - ./deploy.yaml
   - ./service.yaml
