--- a/argocd/apps/media-server/qbittorrent/kustomization.yaml
+++ b/argocd/apps/media-server/qbittorrent/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 generators:
-  -  ./vpn-secrets/secret-generator.yaml
+  -  vpn-secrets/secret-generator.yaml
 resources:
   - ./deploy.yaml
   - ./service.yaml
