--- a/argocd/apps/media-server/qbittorrent/vpn-secrets/secret-generator.yaml
+++ b/argocd/apps/media-server/qbittorrent/vpn-secrets/secret-generator.yaml
@@ -5,10 +5,7 @@ metadata:
   name: authentik-secret-generator
   annotations:
     config.kubernetes.io/function: |
-        exec:
-          # if the binary is in your PATH, you can do
-          path: ksops
-          # otherwise, path should be relative to manifest files, like
-          # path: ../../../ksops
+      exec:
+        path: ksops
 files:
-  - ./vpn-secrets.enc.yaml
+  - vpn-secrets.enc.yaml
