--- a/argocd/apps/media-server/qbittorrent/vpn-secrets/secret-generator.yaml
+++ b/argocd/apps/media-server/qbittorrent/vpn-secrets/secret-generator.yaml
@@ -2,7 +2,7 @@ apiVersion: viaduct.ai/v1
 kind: ksops
 metadata:
   # Specify a name
-  name: authentik-secret-generator
+  name: vpn-secret-generator
   annotations:
     config.kubernetes.io/function: |
       exec:
