move secrets around11

--- a/argocd/apps/media-server/qbittorrent/vpn-secrets/vpn-secrets.enc.yaml
+++ b/argocd/apps/media-server/qbittorrent/vpn-secrets/vpn-secrets.enc.yaml
@@ -5,7 +5,7 @@ metadata:
 type: Opaque
 stringData:
     VPN_ENDPOINT_IP: ENC[AES256_GCM,data:sz4u1IVWFkXiHAPynw==,iv:IiRyFA1f8P8NlbVJ1WTXQXajJs8hsk89bCMOz4qm2ys=,tag:5QsMHIZMPv+PgEsraKfwWA==,type:str]
-    VPN_ENDPOINT_PORT: ENC[AES256_GCM,data:J5BPMoI=,iv:7zpBR9t9yvRta1GUk6QecG3AjGfa6mqcdyBqpLJ+D54=,tag:uZVuT61PCzeZxUouvFnEJw==,type:int]
+    VPN_ENDPOINT_PORT: ENC[AES256_GCM,data:QSfPj1k=,iv:ZQRSNRs+6jsb4JLxgMzTcbsx3RUxG1iIl+fGbo49QPk=,tag:IaaGsNokfi6vk2vUzIq7ng==,type:str]
     WIREGUARD_PUBLIC_KEY: ENC[AES256_GCM,data:KsS9r4/1d92djavySOpa8x/B3H0l52YfkjvPBY4aTjcnE57jCLv2XDiCo5A=,iv:kGvkgTVAcvS7oAvsT2RZqJVYDzVSl+gm340SJzT6Rho=,tag:MtOWJK78/uzozp7UNY5qiw==,type:str]
     WIREGUARD_PRIVATE_KEY: ENC[AES256_GCM,data:jHZzlezJVlX9NRDF8f6P4htSR7Vmamq1/+mrRFdTQ2dMTxC42iucK7NFPRA=,iv:xl20KbTqvoW6hrP2yuJHiIzKrt1avh17GGHRxkvJgs8=,tag:Gwk+ZsjG0WOEzpDsURR2AQ==,type:str]
     WIREGUARD_ADDRESSES: ENC[AES256_GCM,data:pxpGUGYJvHnqcgg=,iv:wnfjKS0QJJH6QBPyxAKu3detbss2s4Z+yxgYbecv+fk=,tag:MRip5hnbdF7aicK0A0acOA==,type:str]
@@ -24,8 +24,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-26T19:57:23Z"
-    mac: ENC[AES256_GCM,data:Q5zR38sYI7r/LuK4j/XqAZOaqhi27iHARwFVu1a4E3yLOSYUz0qaXiVj33fj8+Wc008UsiY/z66tTD5JtaThlKn9EKUrWw14mbti5Ful88mpMKd2om2qCEQf5scn9VMB6HKC2QxBNOqroAIHcGQs1rvv6mOAi8qBAgGI0G20VEc=,iv:E2+UvtMx2AV0WDHqo8SicLIwr1Ggr1NHeFZK1Iqxq6Y=,tag:hwgDLGI9puK/9fHWfiVGqg==,type:str]
+    lastmodified: "2025-01-26T20:23:08Z"
+    mac: ENC[AES256_GCM,data:3lZewvE9G72bXzX72MlzXjo3dCvMydQT/vGlDOtM035Je/D03Lbh7R4oEqvK5Z5YYIYSWnHa+zdamZZVa/wOIzyjrA3I/ZvPCGkVkRxcHA3b3r/ICW70WX4SRq8yNuJIos/Xn6pMSbLcILnCG1NQOeqGsGmTxW50a1/HBMzwb4k=,iv:dcFdZ/DQbDhqdfTnojpWFFiIpBcIctLOTkRIks3ZtYo=,tag:sKLwZOsmIT6fkt7lORBD1A==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
