--- a/argocd/apps/media-server/qbittorrent/ingress.yaml
+++ b/argocd/apps/media-server/qbittorrent/ingress.yaml
@@ -1,17 +1,17 @@
-# apiVersion: networking.k8s.io/v1
-# kind: Ingress
-# metadata:
-#   name: radarr
-# spec:
-#   ingressClassName: nginx
-#   rules:
-#     - host: radarr.k8s.yanello.net
-#       http:
-#         paths:
-#           - backend:
-#               service:
-#                 name: radarr
-#                 port:
-#                   number: 7878
-#             path: /
-#             pathType: Prefix
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: qbittorrent
+spec:
+  ingressClassName: nginx
+  rules:
+    - host: qbit.k8s.yanello.net
+      http:
+        paths:
+          - backend:
+              service:
+                name: qbittorrent
+                port:
+                  number: 8080
+            path: /
+            pathType: Prefix
