--- a/argocd/apps/media-server/qbittorrent/service.yaml
+++ b/argocd/apps/media-server/qbittorrent/service.yaml
@@ -1,16 +1,16 @@
-# apiVersion: v1
-# kind: Service
-# metadata:
-#   annotations:
-#     kompose.cmd: kompose -f radarr.yaml convert
-#     kompose.version: 1.35.0 (HEAD)
-#   labels:
-#     io.kompose.service: radarr
-#   name: radarr
-# spec:
-#   ports:
-#     - name: "7878"
-#       port: 7878
-#       targetPort: 7878
-#   selector:
-#     io.kompose.service: radarr
+apiVersion: v1
+kind: Service
+metadata:
+  annotations:
+    kompose.cmd: kompose -f radarr.yaml convert
+    kompose.version: 1.35.0 (HEAD)
+  labels:
+    io.kompose.service: qbittorrent
+  name: qbittorrent
+spec:
+  ports:
+    - name: "http"
+      port: 8080
+      targetPort: 8080
+  selector:
+    io.kompose.service: qbittorrent
