--- a/argocd/apps/media-server/qbittorrent/vpn-secrets/vpn-secrets.enc.yaml
+++ b/argocd/apps/media-server/qbittorrent/vpn-secrets/vpn-secrets.enc.yaml
@@ -4,7 +4,7 @@ metadata:
     name: vpn-secrets
 type: Opaque
 stringData:
-    VPN_ENDPOINT_IP: ENC[AES256_GCM,data:sz4u1IVWFkXiHAPynw==,iv:IiRyFA1f8P8NlbVJ1WTXQXajJs8hsk89bCMOz4qm2ys=,tag:5QsMHIZMPv+PgEsraKfwWA==,type:str]
+    VPN_ENDPOINT_IP: ENC[AES256_GCM,data:IP93st/P7uFIvc8slQ==,iv:TNGjgiaGdJzGLXqbNE2/QP2S0lWH8P370OJmJ9CO7LU=,tag:GZSoq1yHPI0g9ZXfRzeEAA==,type:str]
     VPN_ENDPOINT_PORT: ENC[AES256_GCM,data:QSfPj1k=,iv:ZQRSNRs+6jsb4JLxgMzTcbsx3RUxG1iIl+fGbo49QPk=,tag:IaaGsNokfi6vk2vUzIq7ng==,type:str]
     WIREGUARD_PUBLIC_KEY: ENC[AES256_GCM,data:KsS9r4/1d92djavySOpa8x/B3H0l52YfkjvPBY4aTjcnE57jCLv2XDiCo5A=,iv:kGvkgTVAcvS7oAvsT2RZqJVYDzVSl+gm340SJzT6Rho=,tag:MtOWJK78/uzozp7UNY5qiw==,type:str]
     WIREGUARD_PRIVATE_KEY: ENC[AES256_GCM,data:jHZzlezJVlX9NRDF8f6P4htSR7Vmamq1/+mrRFdTQ2dMTxC42iucK7NFPRA=,iv:xl20KbTqvoW6hrP2yuJHiIzKrt1avh17GGHRxkvJgs8=,tag:Gwk+ZsjG0WOEzpDsURR2AQ==,type:str]
@@ -24,8 +24,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-26T20:23:08Z"
-    mac: ENC[AES256_GCM,data:3lZewvE9G72bXzX72MlzXjo3dCvMydQT/vGlDOtM035Je/D03Lbh7R4oEqvK5Z5YYIYSWnHa+zdamZZVa/wOIzyjrA3I/ZvPCGkVkRxcHA3b3r/ICW70WX4SRq8yNuJIos/Xn6pMSbLcILnCG1NQOeqGsGmTxW50a1/HBMzwb4k=,iv:dcFdZ/DQbDhqdfTnojpWFFiIpBcIctLOTkRIks3ZtYo=,tag:sKLwZOsmIT6fkt7lORBD1A==,type:str]
+    lastmodified: "2025-01-26T20:36:21Z"
+    mac: ENC[AES256_GCM,data:koM6/KzPEBWIX3xsInLA9SsEd0bIoBAIzQ/O5GEpIknanr37JnujOBfeXolXCKCiWxdfS7g6S2v8rmdJVldmngYWhldkXi0H1F+Aos481jo/A5dqP6Zz1eauiQ2vCG/Z1A5P6cm0nzjVtS6/fHyro4SchCg7ELV6jk+g3DpDxkw=,iv:RR62e6/nmLiP3MYuSemEnLI57mtz3TJXMbi1t+MDzmE=,tag:gd4FpogjlcPODdLRcSWWdw==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
