disable port forward

--- a/argocd/apps/media-server/qbittorrent/deploy.yaml
+++ b/argocd/apps/media-server/qbittorrent/deploy.yaml
@@ -62,10 +62,10 @@ spec:
           value: custom
         - name: VPN_TYPE
           value: wireguard
-        - name: VPN_PORT_FORWARDING
-          value: "on"
-        - name: VPN_PORT_FORWARDING_PROVIDER
-          value: protonvpn
+        # - name: VPN_PORT_FORWARDING
+        #   value: "on"
+        # - name: VPN_PORT_FORWARDING_PROVIDER
+        #   value: protonvpn
         # - name: DNS_KEEP_NAMESERVER
         #   value: "true"
         securityContext:
