--- a/argocd/apps/media-server/qbittorrent/deploy.yaml
+++ b/argocd/apps/media-server/qbittorrent/deploy.yaml
@@ -27,6 +27,13 @@ spec:
           image: lscr.io/linuxserver/qbittorrent:latest
           imagePullPolicy: Always
           name: qbittorrent
+          ports:
+            - containerPort: 8080
+          volumeMounts:
+            - mountPath: /config
+              name: config
+            - mountPath: /data/media/torrents
+              name: torrents
       initContainers:
       # optional gluetun VPN client sidecar
       # https://github.com/qdm12/gluetun
@@ -35,19 +42,19 @@ spec:
         image: "ghcr.io/qdm12/gluetun:latest" # <- you probably want this to be a set version
         restartPolicy: Always # makes this init into a sidecar container k8s 1.29
         imagePullPolicy: Always
-        ports:
-        - name: http-proxy
-          containerPort: 8888
-          protocol: TCP
-        - name: tcp-shadowsocks
-          containerPort: 8388
-          protocol: TCP
-        - name: udp-shadowsocks
-          containerPort: 8388
-          protocol: UDP
-        - name: wireguard
-          containerPort: 51820
-          protocol: UDP
+        # ports:
+        # - name: http-proxy
+        #   containerPort: 8888
+        #   protocol: TCP
+        # - name: tcp-shadowsocks
+        #   containerPort: 8388
+        #   protocol: TCP
+        # - name: udp-shadowsocks
+        #   containerPort: 8388
+        #   protocol: UDP
+        # - name: wireguard
+        #   containerPort: 51820
+        #   protocol: UDP
         envFrom:
         - secretRef:
             name: vpn-secrets
@@ -82,14 +89,13 @@ spec:
           hostPath:
             path: /dev/net/tun
             type: CharDevice
-            
-      #   - name: config
-      #     persistentVolumeClaim:
-      #       claimName: config
-      #   - name: media
-      #     nfs:
-      #       server: marcus-server.lan
-      #       path: /data/media
+        - name: config
+          persistentVolumeClaim:
+            claimName: config
+        - name: torrents
+          nfs:
+            server: marcus-server.lan
+            path: /data/media/torrents
 
         # - name: media
         #   nfs:
