--- a/argocd/apps/media-server/qbittorrent/deploy.yaml
+++ b/argocd/apps/media-server/qbittorrent/deploy.yaml
@@ -6,6 +6,7 @@ metadata:
   name: qbittorrent
 spec:
   replicas: 1
+  revisionHistoryLimit: 3
   selector:
     matchLabels:
       io.kompose.service: qbittorrent
