--- a/argocd/apps/media-server/qbittorrent/deploy.yaml
+++ b/argocd/apps/media-server/qbittorrent/deploy.yaml
@@ -36,9 +36,6 @@ spec:
             - mountPath: /data/media/torrents
               name: torrents
       initContainers:
-      # optional gluetun VPN client sidecar
-      # https://github.com/qdm12/gluetun
-      # https://github.com/qdm12/gluetun-wiki/pull/7
       - name: gluetun # init sidecar for VPN connection
         image: "ghcr.io/qdm12/gluetun:latest" # <- you probably want this to be a set version
         restartPolicy: Always # makes this init into a sidecar container k8s 1.29
@@ -68,10 +65,10 @@ spec:
           value: custom
         - name: VPN_TYPE
           value: wireguard
-        - name: VPN_PORT_FORWARDING
-          value: "on"
-        - name: VPN_PORT_FORWARDING_PROVIDER
-          value: protonvpn
+        # - name: VPN_PORT_FORWARDING
+        #   value: "on"
+        # - name: VPN_PORT_FORWARDING_PROVIDER
+        #   value: protonvpn
         # - name: VPN_PORT_FORWARDING_UP_COMMAND
           # value: /bin/sh -c 'wget -O- --retry-connrefused --post-data "json={\"listen_port\":{{PORTS}}}" http://127.0.0.1:8080/api/v2/app/setPreferences 2>&1'
         # - name: DNS_KEEP_NAMESERVER
