use 2 containers instead of a sidecar2

--- a/argocd/apps/media-server/qbittorrent/deploy.yaml
+++ b/argocd/apps/media-server/qbittorrent/deploy.yaml
@@ -38,7 +38,7 @@ spec:
       #initContainers:
       - name: gluetun # init sidecar for VPN connection
         image: "ghcr.io/qdm12/gluetun:latest" # <- you probably want this to be a set version
-        restartPolicy: Always # makes this init into a sidecar container k8s 1.29
+        #restartPolicy: Always # makes this init into a sidecar container k8s 1.29
         imagePullPolicy: Always
         # ports:
         # - name: http-proxy
