--- a/argocd/apps/media-server/qbittorrent/deploy.yaml
+++ b/argocd/apps/media-server/qbittorrent/deploy.yaml
@@ -77,6 +77,7 @@ spec:
           capabilities:
             add:
             - NET_ADMIN
+            - SYS_MODULE
           privileged: true
         volumeMounts:
           - name: tun-device
