try adding dns nameservers

--- a/argocd/apps/media-server/qbittorrent/deploy.yaml
+++ b/argocd/apps/media-server/qbittorrent/deploy.yaml
@@ -94,3 +94,7 @@ spec:
           nfs:
             server: marcus-server.lan
             path: /data/media/torrents
+      dnsConfig:
+        nameservers:
+        - 8.8.8.8
+        - 1.1.1.1
