--- a/argocd/apps/media-server/qbittorrent/deploy.yaml
+++ b/argocd/apps/media-server/qbittorrent/deploy.yaml
@@ -73,8 +73,8 @@ spec:
         #   value: protonvpn
         # - name: VPN_PORT_FORWARDING_UP_COMMAND
           # value: /bin/sh -c 'wget -O- --retry-connrefused --post-data "json={\"listen_port\":{{PORTS}}}" http://127.0.0.1:8080/api/v2/app/setPreferences 2>&1'
-        - name: DNS_KEEP_NAMESERVER
-          value: "true"
+        # - name: DNS_KEEP_NAMESERVER
+        #   value: "true"
         securityContext:
           privileged: true
           capabilities:
