enable gluetun ports

--- a/argocd/apps/media-server/qbittorrent/deploy.yaml
+++ b/argocd/apps/media-server/qbittorrent/deploy.yaml
@@ -42,19 +42,16 @@ spec:
         image: "ghcr.io/qdm12/gluetun:v3.39.1" # <- you probably want this to be a set version
         restartPolicy: Always # makes this init into a sidecar container k8s 1.29
         imagePullPolicy: IfNotPresent
-        # ports:
-        # - name: http-proxy
-        #   containerPort: 8888
-        #   protocol: TCP
-        # - name: tcp-shadowsocks
-        #   containerPort: 8388
-        #   protocol: TCP
-        # - name: udp-shadowsocks
-        #   containerPort: 8388
-        #   protocol: UDP
-        # - name: wireguard
-        #   containerPort: 51820
-        #   protocol: UDP
+        ports:
+        - name: http-proxy
+          containerPort: 8888
+          protocol: TCP
+        - name: tcp-shadowsocks
+          containerPort: 8388
+          protocol: TCP
+        - name: udp-shadowsocks
+          containerPort: 8388
+          protocol: UDP
         envFrom:
         - secretRef:
             name: vpn-secrets
