--- a/argocd/apps/media-server/qbittorrent/vpn-secrets/vpn-secrets.enc.yaml
+++ b/argocd/apps/media-server/qbittorrent/vpn-secrets/vpn-secrets.enc.yaml
@@ -4,8 +4,8 @@ metadata:
     name: vpn-secrets
 type: Opaque
 stringData:
-    VPN_ENDPOINT_IP: ENC[AES256_GCM,data:0QYuhpBDdVXbSqA3IQ==,iv:7/yfBKYMSzXQ85EGCb3v1ZoWA9y2CODtRF0gfl2qqME=,tag:aLTplAVPRzrN16GZwTNbog==,type:str]
-    VPN_ENDPOINT_PORT: ENC[AES256_GCM,data:QSfPj1k=,iv:ZQRSNRs+6jsb4JLxgMzTcbsx3RUxG1iIl+fGbo49QPk=,tag:IaaGsNokfi6vk2vUzIq7ng==,type:str]
+    WIREGUARD_ENDPOINT_IP: ENC[AES256_GCM,data:GmuMm/V/L5fiQyKSrQ==,iv:szNweAZs6v7762NZugMeL2xFLFw1/CbQYmuaGibFjHA=,tag:nymB1/PUYfcaGqN7vzC0Hw==,type:str]
+    WIREGUARD_ENDPOINT_PORT: ENC[AES256_GCM,data:8R42D68=,iv:pD88acUQAchMglljq0DWQhvPQLPxo/mdgTtKGOHtp3A=,tag:NeBFb0Ly3HCz3wHKLpun9w==,type:str]
     WIREGUARD_PUBLIC_KEY: ENC[AES256_GCM,data:rYSk7u/Ph12Zq3El69CSbVUUtwf39NAAk/LZUi6LFmGfPsf65YoWQ4E=,iv:7uGJBtXKOqhAfQzWLeqfhCkaPdpCRQip3rB6b4/xYR0=,tag:r1KFd5TQp9+rcfTA5d8l7g==,type:str]
     WIREGUARD_PRIVATE_KEY: ENC[AES256_GCM,data:jHZzlezJVlX9NRDF8f6P4htSR7Vmamq1/+mrRFdTQ2dMTxC42iucK7NFPRA=,iv:xl20KbTqvoW6hrP2yuJHiIzKrt1avh17GGHRxkvJgs8=,tag:Gwk+ZsjG0WOEzpDsURR2AQ==,type:str]
     WIREGUARD_ADDRESSES: ENC[AES256_GCM,data:pxpGUGYJvHnqcgg=,iv:wnfjKS0QJJH6QBPyxAKu3detbss2s4Z+yxgYbecv+fk=,tag:MRip5hnbdF7aicK0A0acOA==,type:str]
@@ -24,8 +24,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-27T02:34:03Z"
-    mac: ENC[AES256_GCM,data:bByD3wel65TFNLZo8M5OEVBoWr39sdoGZLSV4RVfCJvNZPm66jSrFw3rsXcMWbMXrZf9sCTPTlKn3g7khr8jLfvRRPU15wlU8v804ljvK+QU3kvOTG8pRTVMPpxlHSBDGjfivECiso8lNNGmjdgfdymLpV9VzqesWo3rYmB5TXY=,iv:GZOuBY4jeDne8PQR8iVsX+FZrqLTqhnsnbQVQLfGCIU=,tag:HszwTbY6k6BGCwDXzs+iVA==,type:str]
+    lastmodified: "2025-01-27T02:40:38Z"
+    mac: ENC[AES256_GCM,data:nwxiK7yM8f40tSvHGi+jXxMxGKK/yU0fyc2C7E3QV6KLrGPTP/eyTi8xAnUUtQ8i0/WKhN6VloUwUEyz3Yz/qppycbcF2IU7+uuPHpO4/n6GGzdvimr7imkXnh5GrkblSKTzWtcytIGFCYj9XD8+wgyzvQd+uYtoNkGEJ4i1czs=,iv:L8VwPdpFK/SET7NdLjAFFI0gkB3nEATKkbn24fzrVr0=,tag:AkpLwfgauadsiWCHqctaEA==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
