add net-policy for qbit

--- a/argocd/apps/media-server/qbittorrent/deploy.yaml
+++ b/argocd/apps/media-server/qbittorrent/deploy.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   labels:
     io.kompose.service: qbittorrent
+    app: qbittorrent
   name: qbittorrent
 spec:
   replicas: 1
