--- a/argocd/apps/media-server/qbittorrent/deploy.yaml
+++ b/argocd/apps/media-server/qbittorrent/deploy.yaml
@@ -70,22 +70,13 @@ spec:
         - name: VPN_PORT_FORWARDING_PROVIDER
           value: protonvpn
         # - name: VPN_PORT_FORWARDING_UP_COMMAND
-          # value: /bin/sh -c 'wget -O- --retry-connrefused --post-data "json={\"listen_port\":{{PORTS}}}" http://127.0.0.1:8080/api/v2/app/setPreferences 2>&1'
-        # - name: DNS_KEEP_NAMESERVER
-        #   value: "true"
+        - value: /bin/sh -c 'wget -O- --retry-connrefused --post-data "json={\"listen_port\":{{PORTS}}}" http://qbittorrent.svc:8080/api/v2/app/setPreferences 2>&1'
         securityContext:
           privileged: true
           capabilities:
             add:
             - NET_ADMIN
-        # volumeMounts:
-        #   - name: tun-device
-        #     mountPath: /dev/net/tun
       volumes:
-        # - name: tun-device
-        #   hostPath:
-        #     path: /dev/net/tun
-        #     type: CharDevice
         - name: config
           persistentVolumeClaim:
             claimName: config
