--- a/argocd/apps/media-server/qbittorrent/deploy.yaml
+++ b/argocd/apps/media-server/qbittorrent/deploy.yaml
@@ -70,7 +70,7 @@ spec:
         - name: VPN_PORT_FORWARDING_PROVIDER
           value: protonvpn
         - name: VPN_PORT_FORWARDING_UP_COMMAND
-          value: /bin/sh -c 'wget -O- --retry-connrefused --post-data "json={\"listen_port\":{{PORTS}}}" http://qbittorrent.svc:8080/api/v2/app/setPreferences 2>&1'
+          value: /bin/sh -c 'wget -O- --retry-connrefused --post-data "json={\"listen_port\":{{PORTS}}}" http://qbittorrent:8080/api/v2/app/setPreferences 2>&1'
         securityContext:
           privileged: true
           capabilities:
