--- a/argocd/apps/nfs/app.yaml
+++ b/argocd/apps/nfs/app.yaml
@@ -25,7 +25,7 @@ spec:
       releaseName: nfs-storage
       valuesObject:
         nfs:
-          server: 192.168.1.18
+          server: marcus-server.lan
           volumeName: nfs-storage
           path: /zpool/k8s/
         storageClass:
